Add async attr on script tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- 브라우저 기본 스타일 초기화 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <!-- main.js 연결 -->
-    <script src="./js/main.js"></script>
+    <script async src="./js/main.js"></script>
     <!-- main.css 연결 -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
